# Parking_Where

./: .gitignore  README.md  pyproject.toml
backend/: .gitignore  app.py  db.py  init_DB.py  pyproject.toml  requirements.txt
backend/templates/: index.html
frontend/: package.json
frontend/parkingwhere/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: MiniSearch.js  Nav.js  ResultOptions.js  Search.js  SearchOptions.js
frontend/src/css/: Nav.module.css  component.module.css  homestyle.module.css  mini.module.css  style.module.css
frontend/src/views/: Main.js  Result.js  Selects.js
