[tool.poetry]
name = "parkingwhere"
version = "0.1.0"
description = ""
authors = ["Heeeon <bbjoite09@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pymongo = "^3.11.4"
requests = "^2.25.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
